--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~49.0.6",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
