--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-paper": "^5.0.0-rc.9",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
