--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
@@ -17,7 +18,7 @@
     "expo-status-bar": "~1.6.0",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-paper": "^5.0.0-rc.9",
     "react-native-safe-area-context": "4.6.3",
