--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~49.0.6",
     "expo-asset": "~8.10.1",
     "expo-file-system": "~15.4.4",
+    "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
